--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <title>杨琳的学习笔记</title>
+    <title>lucky的学习笔记</title>
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link href="img/icon.ico" rel="shortcut icon" />
 </head>
