--- a/pages/css3.html
+++ b/pages/css3.html
@@ -377,7 +377,7 @@
         <ul class="info_1">
             <li>
                 <div class="slide slide-all">
-                    <a href="../checkout/index.html">使用CSS3美化复选框checkbox</a>
+                    <a href="C3example/checkout/index.html">使用CSS3美化复选框checkbox</a>
                 </div>
             </li>
         </ul>
